Add writer to Query3